WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190263
Suppress unreachable code warning for LLIntAssembly.h code.
https://bugs.webkit.org/show_bug.cgi?id=190263
Summary
Suppress unreachable code warning for LLIntAssembly.h code.
Mark Lam
Reported
2018-10-03 14:53:25 PDT
This is needed because LLIntAssembly.h is template generated from LowLevelInterpreter asm files, and may contain dead code which are harmless, but will trip up the warning. We should suppress the warning so that it doesn't break builds. <
rdar://problem/44986532
>
Attachments
proposed patch.
(1.57 KB, patch)
2018-10-03 14:58 PDT
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-10-03 14:58:34 PDT
Created
attachment 351549
[details]
proposed patch.
Mark Lam
Comment 2
2018-10-03 15:03:21 PDT
Thanks for the review. Landed in
r236813
: <
http://trac.webkit.org/r236813
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug