Suppress unreachable code warning for LLIntAssembly.h code. https://bugs.webkit.org/show_bug.cgi?id=190263 <rdar://problem/44986532>

Reviewed by Saam Barati.

This is needed because LLIntAssembly.h is template generated from LowLevelInterpreter
asm files, and may contain dead code which are harmless, but will trip up the warning.
We should suppress the warning so that it doesn't break builds.

* llint/LowLevelInterpreter.cpp:
(JSC::CLoop::execute):



Canonical link: https://commits.webkit.org/205214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236813 268f45cc-cd09-0410-ab3c-d52691b4dbfc